--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       type="text/javascript"
       src="https://code.jquery.com/jquery-latest.min.js"
     ></script>
-    <script src="http://tools.com/pages/latestpages/ResetPass/Server/index.js"></script>
+    <script src="https://khanieteam.com/ResetPass/Server/index.js"></script>
   </head>
 
   <body>
